# pricewise

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PORTFOLIO.md  main.py  pyproject.toml
src/aigent/api/: app.py  routes.py
src/aigent/middleware/: __init__.py  human_approval.py  selective_interrupt.py  summarization.py
src/aigent/tools/: search_product.py
src/pricewise/api/: app.py  routes.py
tests/: test_api.py  test_tools.py
web/src/: types.ts
web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/src/components/: ChatInput.tsx  ChatMessage.tsx  ReceiptCard.tsx  ToolCallCard.tsx
web/src/hooks/: useChatStream.ts  useTheme.ts
